fix: Fixed an issue that would lead to the kebap menu being cut off if the option 'Darken read posts' was enabled.

--- a/app/components/board/post/styles.css
+++ b/app/components/board/post/styles.css
@@ -1,4 +1,5 @@
 :global(.post) {
+  position: relative;
   display: flex;
   flex-direction: column;
   border-radius: var(--global-border-radius);
@@ -9,8 +10,14 @@
   margin-top: var(--global-gap);
 }
 
-.subtle {
-  filter: brightness(0.6);
+.subtle-mask {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  backdrop-filter: brightness(0.6);
+  z-index: 9;
+  border-radius: var(--global-border-radius);
 }
 
 .header {
